--- a/personal-website/styles/Home.module.css
+++ b/personal-website/styles/Home.module.css
@@ -1,8 +1,4 @@
-.container {
-  padding: 0 2rem;
-}
-
-.main {
+/* .main {
   min-height: 100vh;
   padding: 4rem 0;
   flex: 1;
@@ -10,7 +6,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
+} */
 
 /* .footer {
   display: flex;
