--- a/personal-website/styles/IntroSection.module.css
+++ b/personal-website/styles/IntroSection.module.css
@@ -7,6 +7,15 @@
     border-color: 'white' */
 }
 
+.fadeIn {
+    opacity: 100%;
+    transition: opacity 1s;
+}
+
+.fadeIn.visible {
+    opacity: 100%;
+}
+
 .displayRow {
     display: flex;
     justify-content: center;
@@ -29,7 +38,7 @@
 
 
 .displayItemLit {
-    transition: color 1.2s, text-shadow 1.2s, -webkit-text-stroke-color 1.2s;
+    transition: color 1.5s, text-shadow 1.5s, -webkit-text-stroke-color 1.5s;
     margin-left: 30px;
     margin-top: 30px;
     font-size: 80px;
