--- a/personal-website/styles/globals.css
+++ b/personal-website/styles/globals.css
@@ -15,6 +15,48 @@ a {
   box-sizing: border-box;
 }
 
+.lightUpText {
+  transition: color 1.5s, text-shadow 1.5s, -webkit-text-stroke-color 1.5s;
+  font-size: 80px;
+  line-height: 1em;
+  color: rgb(255, 255, 255);
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: rgb(255, 255, 255);
+  text-shadow: 0px 0px 10px rgb(255, 255, 255);
+  cursor: default;
+  user-select: none;
+}
+
+.bigDimText {
+  transition: color .8s, text-shadow .8s, -webkit-text-stroke-color .8s;
+  text-align: center;
+  font-size: 120px;
+  line-height: 1em;
+  color: rgb(0, 0, 0);
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: rgb(12, 12, 12);
+  cursor: default;
+  user-select: none;
+
+  transition: all 1s;
+}
+
+.rotateboy {
+  text-align: center;
+  font-size: 120px;
+  line-height: 1em;
+  color: rgb(0, 0, 0);
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: rgb(12, 12, 12);
+  cursor: default;
+  user-select: none;
+
+  transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(80deg) rotateY(0deg) rotateZ(0deg) skew(0deg);
+  transition: all 1s;
+  transform-style: preserve-3d;
+  color: rgb(250, 250, 250);
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
