Big start in responsive design

--- a/personal-website/styles/XDisplay.module.css
+++ b/personal-website/styles/XDisplay.module.css
@@ -29,37 +29,61 @@
 
 
 .displayItemLitByCycle {
-    width: 65px;
 
-    text-align: center;
     transition: all .1s;
-    font-size: 60px;
-    line-height: 1em;
     color: rgb(255, 255, 255);
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: rgb(255, 255, 255);
     text-shadow: 0px 0px 10px rgb(255, 255, 255);
-    cursor: default;
-    user-select: none;
 
     transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(1080deg) rotateY(0deg) rotateZ(360deg) skew(360deg);
 
 }
 
 .displayItemLitByMouse {
-    width: 65px;
 
-    text-align: center;
     transition: all .1s;
-    font-size: 60px;
-    line-height: 1em;
     color: rgb(255, 255, 255);
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: rgb(255, 255, 255);
     text-shadow: 0px 0px 10px rgb(255, 255, 255);
-    cursor: pointer;
-    user-select: none;
 
     transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(360deg) rotateY(0deg) rotateZ(0deg) skew(0deg);
+}
 
+/* SMARTPHONES PORTRAIT */
+@media only screen and (min-width: 300px) {
+    .displayItem {
+        width: 30px;
+        font-size: 30px;
+        line-height: .8em;
+    }
+}
+
+/* SMARTPHONES LANDSCAPE */
+@media only screen and (min-width: 480px) {
+    .displayItem {
+        width: 30px;
+        font-size: 30px;
+        line-height: .8em;
+    }
+}
+
+/* TABLETS PORTRAIT */
+@media only screen and (min-width: 768px) {
+    .displayItem {
+        width: 30px;
+        font-size: 30px;
+        line-height: .8em;
+    }
+}
+
+
+/* TABLET LANDSCAPE / DESKTOP */
+@media only screen and (min-width: 1024px) {
+    .displayItem {
+        width: 65px;
+        font-size: 60px;
+        line-height: 1em;
+    }
 }
