--- a/personal-website/styles/globals.css
+++ b/personal-website/styles/globals.css
@@ -83,6 +83,28 @@ a {
   text-align: right;
 }
 
+.listSection {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  align-items: flex-start;
+  margin-bottom: 5vh;
+  margin-top: 6vh;
+  width: 55vw;
+}
+
+.listLine {
+  display: flex;
+  align-items: center;
+  align-self: center;
+  margin-block: 3vh;
+}
+
+.landingSectionContainer {
+  display: flex;
+  justify-content: center;
+}
+
 
 @media (prefers-color-scheme: dark) {
   html {
@@ -108,11 +130,17 @@ a {
   .headerText {
     font-size: 30px;
     line-height: 1em;
-    text-shadow: 0px 0px 0px rgb(255, 255, 255);
+    text-shadow: 0px 0px 10px rgb(255, 255, 255);
+    letter-spacing: .1rem;
   }
 
-  /* SMALL HEADER??? */
-  /* SMALL SUBHEADER??? */
+  .smallHeaderText {
+    font-size: 20px;
+  }
+
+  .smallSubheaderText {
+    font-size: 12px;
+  }
 
   .paragraphText {
     font-size: 12px;
@@ -120,10 +148,22 @@ a {
     text-shadow: 0px 0px 0px rgb(255, 255, 255);
   }
 
-  .workInProgress {
+  .listSection {
+    width: 80vw;
+    margin-bottom: 3vh;
 
+  }
+
+  .landingSectionContainer {
+    flex-direction: column;
+  }
+
+
+  .workInProgress {
     font-size: 20px;
   }
+
+
 
 }
 
@@ -148,6 +188,12 @@ a {
   .paragraphText {
     font-size: 20px;
   }
+
+  .listSection {
+    width: 80vw;
+  }
+
+
 }
 
 /* TABLETS PORTRAIT */
@@ -167,11 +213,59 @@ a {
     line-height: 1.4em;
     text-shadow: 0px 0px 0px rgb(255, 255, 255);
   }
+
+  .listSection {
+    width: 70vw;
+  }
+
+  .landingSectionContainer {
+    flex-direction: column;
+  }
 }
 
 
 /* TABLET LANDSCAPE / DESKTOP */
 @media only screen and (min-width: 1024px) {
+  .nameText {
+    font-size: 100px;
+  }
+
+  .headerText {
+    font-size: 60px;
+    line-height: 1em;
+    text-shadow: 0px 0px 10px rgb(255, 255, 255);
+  }
+
+  .smallHeaderText {
+    font-size: 30px;
+  }
+
+  .smallSubheaderText {
+    font-size: 16px;
+  }
+
+  .paragraphText {
+    font-size: 20px;
+    line-height: 1.4em;
+    text-shadow: 0px 0px 0px rgb(255, 255, 255);
+  }
+
+  .listSection {
+    width: 55vw;
+  }
+
+  .landingSectionContainer {
+    flex-direction: row;
+  }
+
+
+  .workInProgress {
+    font-size: 40px;
+  }
+}
+
+/* LARGE DESKTOP */
+@media only screen and (min-width: 1760px) {
   .nameText {
     font-size: 120px;
   }
@@ -182,14 +276,30 @@ a {
     text-shadow: 0px 0px 10px rgb(255, 255, 255);
   }
 
+  .smallHeaderText {
+    font-size: 30px;
+  }
+
+  .smallSubheaderText {
+    font-size: 16px;
+  }
+
   .paragraphText {
     font-size: 20px;
     line-height: 1.4em;
     text-shadow: 0px 0px 0px rgb(255, 255, 255);
   }
 
-  .workInProgress {
+  .listSection {
+    width: 55vw;
+  }
 
+  .landingSectionContainer {
+    flex-direction: row;
+  }
+
+
+  .workInProgress {
     font-size: 40px;
   }
 }
