--- a/personal-website/styles/XDisplay.module.css
+++ b/personal-website/styles/XDisplay.module.css
@@ -46,6 +46,7 @@
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: rgb(255, 255, 255);
     text-shadow: 0px 0px 10px rgb(255, 255, 255);
+    cursor: pointer;
 
     transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(360deg) rotateY(0deg) rotateZ(0deg) skew(0deg);
 }
